--- a/src/app/area-not-logged/components/login/login.component.html
+++ b/src/app/area-not-logged/components/login/login.component.html
@@ -5,34 +5,40 @@
 
 <!-- Background and form -->
 <div class="background">
-  <img class="wave" src="../../../../../assets/images/cloud-ef.gif"/>
+  <img class="wave" src="../../../../../assets/images/cloud-ef.gif" />
   <div class="container">
-    <div class="img">
-    </div>
+    <div class="img"></div>
     <div class="login-content">
-        <form [formGroup]="formLogin" (ngSubmit)="login()">
-        <img src="../../../../../assets/images/logo-dragon.png"/>
+      <form [formGroup]="loginForm" (ngSubmit)="login()">
+        <img src="../../../../../assets/images/logo-dragon.png" />
         <h2 class="title">Bem Vindo</h2>
-        <div class="input-div one">
-          <div class="i">
-            <i class="fas fa-user"></i>
-          </div>
-          <div class="div">
-            <h5>Usuário</h5>
-            <input type="text" class="input" formControlName="UserName"/>
-          </div>
-        </div>
-        <div class="input-div pass">
-          <div class="i">
-            <i class="fas fa-lock"></i>
-          </div>
-          <div class="div">
-            <h5>Senha</h5>
-            <input type="password" class="input" formControlName="Password?"/>
-          </div>
-        </div>
-        <!-- <a href="#">Forgot Password?</a> -->
-        <button type="submit" class="btn" value="Login">Enviar</button>
+        <input
+          formControlName="userName"
+          class="input-login"
+          type="text"
+          placeholder="usuário"
+          [ngClass]="{ 'error': submitted && loginForm.controls.userName.errors }"
+        />
+        <div class="error">
+          <span *ngIf="submitted && loginForm.controls.userName.errors">
+              Campo obrigatório
+          </span>
+      </div>
+
+        <input
+          formControlName="password"
+          class="input-login"
+          type="text"
+          placeholder="senha"
+          [ngClass]="{ 'error': submitted && loginForm.controls.password.errors }"
+        />
+        <div class="error">
+          <span *ngIf="submitted && loginForm.controls.password.errors">
+              Campo obrigatório
+          </span>
+      </div>
+        <button type="submit" class="btn" value="Login">Entrar
+        </button>
       </form>
     </div>
   </div>
