--- a/src/app/area-not-logged/components/login/login.component.scss
+++ b/src/app/area-not-logged/components/login/login.component.scss
@@ -12,6 +12,10 @@ body {
   overflow: hidden;
 }
 
+.error {
+  color: red;
+}
+
 .wave {
   position: fixed;
   bottom: 0;
@@ -23,19 +27,11 @@ body {
   object-position: 0 60%;
 }
 
-//   .background{
-//     height:40em;
-//     background-size:cover;
-//     width:auto;
-//     background-image:url('../../../../../assets/images/cloud-ef.gif');
-//     background-position:50% 50%;
-//   }
-
-.page-container,
-.canvas-container {
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
+.background {
+  height: 40em;
+  background-size: cover;
+  width: auto;
+  background-position: 50% 50%;
 }
 
 #skyDragon {
@@ -91,108 +87,21 @@ form {
   font-size: 2.9rem;
 }
 
-.login-content .input-div {
-  position: relative;
-  display: grid;
-  grid-template-columns: 7% 93%;
-  margin: 25px 0;
-  padding: 5px 0;
-  border-bottom: 2px solid #d9d9d9;
-}
-
-.login-content .input-div.one {
-  margin-top: 0;
-}
-
-.i {
-  color: #d9d9d9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.i i {
-  transition: 0.3s;
-}
-
-.input-div > div {
-  position: relative;
-  height: 45px;
-}
-
-.input-div > div > h5 {
-  position: absolute;
-  left: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #999;
-  font-size: 18px;
-  transition: 0.3s;
-}
-
-.input-div:before,
-.input-div:after {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  width: 0%;
-  height: 2px;
-  background-color: #38d39f;
-  transition: 0.4s;
-}
-
-.input-div:before {
-  right: 50%;
-}
-
-.input-div:after {
-  left: 50%;
-}
-
-.input-div.focus:before,
-.input-div.focus:after {
-  width: 50%;
-}
-
-.input-div.focus > div > h5 {
-  top: -5px;
-  font-size: 15px;
-}
-
-.input-div.focus > .i > i {
-  color: #38d39f;
-}
-
-.input-div > div > input {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+.input-login {
+  background-color: transparent;
+  border-width: 0px 0px 1px;
+  box-sizing: border-box;
+  margin-bottom: 30px;
+  text-align: left;
   outline: none;
-  background: none;
-  padding: 0.5rem 0.7rem;
-  font-size: 1.2rem;
-  color: #555;
-  font-family: "poppins", sans-serif;
-}
+  width: 100%;
+  border-bottom-style: solid;
+  border-bottom-color: #878686;
+  white-space: nowrap;
+  overflow: hidden;
 
-.input-div.pass {
-  margin-bottom: 4px;
-}
-
-a {
-  display: block;
-  text-align: right;
-  text-decoration: none;
-  color: #999;
-  font-size: 0.9rem;
-  transition: 0.3s;
-}
-
-a:hover {
-  color: #38d39f;
+  font-size: 0.75rem;
+  padding-bottom: 6px;
 }
 
 .btn {
@@ -254,34 +163,6 @@ a:hover {
     justify-content: center;
   }
 }
-
-// canvas {
-//   margin: 0 auto;
-//   background-color: transparent;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-// }
-
-// #foreground4 {
-//   -webkit-animation: scroll 15s linear infinite;
-//           animation: scroll 15s linear infinite;
-// }
-
-// #foreground3 {
-//   -webkit-animation: scroll 7s linear infinite;
-//           animation: scroll 7s linear infinite;
-// }
-
-// #foreground2 {
-//   -webkit-animation: scroll 4s linear infinite;
-//           animation: scroll 4s linear infinite;
-// }
-
-// #foreground1 {
-//   -webkit-animation: scroll 1s linear infinite;
-//           animation: scroll 1s linear infinite;
-// }
 
 @-webkit-keyframes scroll {
   from {
