--- a/src/app/dragons/components/list-dragons/list-dragons.component.html
+++ b/src/app/dragons/components/list-dragons/list-dragons.component.html
@@ -1,56 +1,33 @@
 <div class="container">
   <h2>Lista de dragões</h2>
-  <ul class="responsive-table">
-    <li class="table-header">
-      <div class="col col-1">Id</div>
-      <div class="col col-2">Nome</div>
-      <div class="col col-4">Tipo</div>
-      <div class="col col-3">Data de criação</div>
-      <div class="col col-1">Ações</div>
-    </li>
-    <div *ngIf="dragonsList.length">
-      <li class="table-row" *ngFor="let dragon of dragonsList">
-        <div
-          class="col col-1"
-          data-label="Id"
-          (click)="redirectShowDetailsDragon(dragon.id)"
-        >
-          {{ dragon.id }}
-        </div>
-        <div
-          class="col col-2"
-          data-label="Dragon name"
-          (click)="redirectShowDetailsDragon(dragon.id)"
-        >
-          {{ dragon.name }}
-        </div>
-        <div
-          class="col col-3"
-          data-label="Tipo de dragão"
-          (click)="redirectShowDetailsDragon(dragon.id)"
-        >
-          {{ dragon.type }}
-        </div>
-        <div
-          class="col col-4"
-          data-label="Data de criação"
-          (click)="redirectShowDetailsDragon(dragon.id)"
-        >
-          {{ dragon.createdAt }}
-        </div>
-        <div class="btn-blue-tr" (click)="redirectEditDragon(dragon.id)">
-          Editar dragão
-        </div>
-        <div class="btn-red-tr" (click)="deleteDragon(dragon.id)">
-          Deletar dragão
-        </div>
-      </li>
-    </div>
-  </ul>
-  <div class="align">
-    <button (click)="redirectCreateDragon()" class="btn-blue-tr">
-      Adicionar dragão
-    </button>
-    <button (click)="logout()" class="btn-blue-tr">Deslogar</button>
-  </div>
+<div class="table-wrapper">
+    <table class="fl-table">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nome</th>
+            <th>Tipo</th>
+            <th>Data de criação</th>
+            <th>Ações</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let dragon of dragonsList">
+            <td (click)="redirectShowDetailsDragon(dragon.id)"> {{ dragon.id }}</td>
+            <td (click)="redirectShowDetailsDragon(dragon.id)"> {{ dragon.name }}</td>
+            <td (click)="redirectShowDetailsDragon(dragon.id)"> {{ dragon.type }}</td>
+            <td (click)="redirectShowDetailsDragon(dragon.id)" class="cursor-pointer">{{dragon.createdAt | date : 'dd/MM/yyyy HH:mm:ss'}}</td>
+            <td>
+              <button class="cursor-pointer" (click)="deleteDragon(dragon.id)">Remover</button>&nbsp;
+              <button class="cursor-pointer" (click)="redirectEditDragon(dragon.id)">Editar</button>
+          </td>
+        </tr>
+                <tbody>
+    </table>
+</div>
+<div class="align">
+  <button (click)="redirectCreateDragon()" class="btn-blue-tr">
+    Adicionar dragão
+  </button>
+  <button (click)="logout()" class="btn-blue-tr">Deslogar</button>
 </div>
