--- a/src/app/shared/components/page-not-found/page-not-found.component.scss
+++ b/src/app/shared/components/page-not-found/page-not-found.component.scss
@@ -25,9 +25,6 @@
 .container {
   width: 100vw;
   height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 7rem;
-  padding: 0 2rem;
-  align-items: center;
+  display: flex;
+  justify-content: center;
 }
